integrate payment safety and postgres services
